--- a/config/conf_app.gradle
+++ b/config/conf_app.gradle
@@ -19,6 +19,13 @@ ext {
     appType = getConfigMap(appTypeStr).get("appType")
     appFileRoot = getConfigMap(appTypeStr).get("appFileRoot")
     applicationInitClass = getConfigMap(appTypeStr).get("applicationInitClass")
+
+    dependencies = [
+        /**★★★请在下面配置应用需要的三方框架依赖项*/
+        //动画库
+        "nineoldandroids" : 'com.nineoldandroids:library:2.4.0',
+    ]
+
 }
 
 Map<String, String> getConfigMap(String appType) {
