--- a/template/temlate.gradle
+++ b/template/temlate.gradle
@@ -8,5 +8,5 @@ dependencies {
     //依赖基础库
     implementation project(':library:library_frame')
     //每个组件中依赖阿里路由编译框架
-    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
+    annotationProcessor rootProject.ext.libdependencies["arouter-compiler"]
 }
