--- a/app/app_run/build.gradle
+++ b/app/app_run/build.gradle
@@ -2,7 +2,7 @@ apply from: '../app.gradle'
 //android {
 //}
 dependencies {
-    implementation rootProject.ext.dependencies["nineoldandroids"]
+//    implementation rootProject.ext.dependencies["nineoldandroids"]
 
 //    implementation project(':template:template_ldjg')
 }
