--- a/config/conf_app.gradle
+++ b/config/conf_app.gradle
@@ -11,7 +11,7 @@ ext {
     //TYPE_VEDIO       视频
 
     //当前运行的app类型 详情请查看：FpcLibsProject\library\library_core\src\main\java\com\fpc\core\config\AppTypes.java
-    appTypeStr = "TYPE_VEDIO"
+    appTypeStr = "TYPE_ALONG"
     applicationId = getConfigMap(appTypeStr).get("applicationId")
     versionCode = getConfigMap(appTypeStr).get("versionCode")
     versionName = getConfigMap(appTypeStr).get("versionName")
@@ -19,6 +19,7 @@ ext {
     appType = getConfigMap(appTypeStr).get("appType")
     appFileRoot = getConfigMap(appTypeStr).get("appFileRoot")
     applicationInitClass = getConfigMap(appTypeStr).get("applicationInitClass")
+    baseUrl = getConfigMap(appTypeStr).get("baseUrl")
 
     dependencies = [
         /**★★★请在下面配置应用需要的三方框架依赖项*/
@@ -58,7 +59,9 @@ Map<String, String> getConfigMap_along() {
 //            baseUrl                    : "\"http://114.115.144.251:8085/\"",    //BaseUrl
             appFileRoot       : "\"OpenXu\"",   //app存储文件夹名
             //Application初始化类，使用,分割
-            applicationInitClass :""
+            applicationInitClass :"\"\"",
+            //接口统一的基础链接
+            baseUrl           :"\"http://www.baidu.com\""
 
     ]
 }
@@ -75,7 +78,9 @@ Map<String, String> getConfigMap_english() {
 //            baseUrl                    : "\"http://114.115.144.251:8085/\"",    //BaseUrl
             appFileRoot       : "\"OpenXu\"",   //app存储文件夹名
             //Application初始化类，使用,分割
-            applicationInitClass :"\"com.openxu.english.AppInitLogic\""
+            applicationInitClass :"\"com.openxu.english.AppInitLogic\"",
+            //接口统一的基础链接
+            baseUrl           :"\"\""
     ]
 }
 
@@ -90,7 +95,9 @@ Map<String, String> getConfigMap_vedio() {
 //            baseUrl                    : "\"http://114.115.144.251:8085/\"",    //BaseUrl
             appFileRoot         : "\"OpenXu\"",   //app存储文件夹名
             //Application初始化类，使用,分割
-            applicationInitClass: "\"com.openxu.vedio.AppInitLogic\""
+            applicationInitClass: "\"com.openxu.vedio.AppInitLogic\"",
+            //接口统一的基础链接
+            baseUrl           :"\"\""
     ]
 }
 
