--- a/module/module_xftts/build.gradle
+++ b/module/module_xftts/build.gradle
@@ -1,1 +1,9 @@
 apply from: "../module.gradle"
+
+android{
+    sourceSets {
+        main {
+            jniLibs.srcDirs "libs"
+        }
+    }
+}
