--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,8 @@
-include ':module:module_db'
 include ':library:library_core',
         ':library:library_frame'
 
-include ':module:module_pf',
+include':module:module_db',
+        ':module:module_pf',
         ':module:module_xftts',    //讯飞语音合成模块
         ':module:module_fanyi',
         ':module:module_chaxun'
