--- a/app/app_singlemd/build.gradle
+++ b/app/app_singlemd/build.gradle
@@ -1,4 +1,7 @@
 apply from: '../app.gradle'
 dependencies {
     implementation project(':module:module_chaxun')
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
