--- a/app/app_singlemd/src/main/AndroidManifest.xml
+++ b/app/app_singlemd/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		package="com.openxu.single">
 
@@ -11,8 +12,9 @@
 			android:theme="@style/AppTheme">
 		<activity android:name=".SplashActivity">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 	</application>
