--- a/module/module_chaxun/build.gradle
+++ b/module/module_chaxun/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     implementation project(':module:module_pf')
     //讯飞语音
     implementation project(':module:module_xftts')
+    implementation project(':module:module_db')
 
 }
