--- a/module/module_db/build.gradle
+++ b/module/module_db/build.gradle
@@ -1,31 +1,16 @@
-apply plugin: 'com.android.library'
-
+apply from: "../module.gradle"
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 android {
-    compileSdkVersion 29
-
-    defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
+    rootProject.ext.setAndroidConfig android
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api rootProject.ext.libdependencies["greendao"]
 
+}
+
+greendao {
+    schemaVersion 1     //数据库版本号
+    daoPackage 'com.openxu.db.dao'//设置DaoMast4er、DaoSession、Dao包名
+    targetGenDir 'src/main/java'//设置DaoMaster、DaoSession、Dao目录
 }
