--- a/ijkplayer/ijkplayer-example/build.gradle
+++ b/ijkplayer/ijkplayer-example/build.gradle
@@ -36,17 +36,18 @@ dependencies {
     implementation 'com.squareup:otto:1.3.8'
 
     implementation project(':ijkplayer:ijkplayer-java')
-    implementation project(':ijkplayer:ijkplayer-exo')
+    implementation project(':ijkplayer:ijkplayer-armv7a')
+//    implementation project(':ijkplayer:ijkplayer-exo')
 
-    all32Implementation project(':ijkplayer:ijkplayer-armv5')
-    all32Implementation project(':ijkplayer:ijkplayer-armv7a')
-    all32Implementation project(':ijkplayer:ijkplayer-x86')
-
-    all32Implementation project(':ijkplayer:ijkplayer-armv5')
-    all32Implementation project(':ijkplayer:ijkplayer-armv7a')
-    all32Implementation project(':ijkplayer:ijkplayer-arm64')
-    all32Implementation project(':ijkplayer:ijkplayer-x86')
-    all32Implementation project(':ijkplayer:ijkplayer-x86_64')
+//    all32Implementation project(':ijkplayer:ijkplayer-armv5')
+//    all32Implementation project(':ijkplayer:ijkplayer-armv7a')
+//    all32Implementation project(':ijkplayer:ijkplayer-x86')
+//
+//    all32Implementation project(':ijkplayer:ijkplayer-armv5')
+//    all32Implementation project(':ijkplayer:ijkplayer-armv7a')
+//    all32Implementation project(':ijkplayer:ijkplayer-arm64')
+//    all32Implementation project(':ijkplayer:ijkplayer-x86')
+//    all32Implementation project(':ijkplayer:ijkplayer-x86_64')
 
     // implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     // implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
