--- a/config/conf_lib.gradle
+++ b/config/conf_lib.gradle
@@ -39,7 +39,8 @@ ext {
         'glide'           :   'com.github.bumptech.glide:glide:4.8.0',
 //        "picasso"             : "com.squareup.picasso:picasso:2.5.2",
         //EventBus事件发布和订阅框架
-//            "eventbus"            : "org.greenrobot:eventbus:3.0.0",
+        "eventbus"            : "org.greenrobot:eventbus:3.2.0",
+        "eventbus-annotation" : "org.greenrobot:eventbus-annotation-processor:3.2.0",
         "rxbus"               : 'com.hwangjr.rxbus:rxbus:1.0.6',
         //二维码
         "zxing"          : "com.google.zxing:core:3.3.0",
@@ -74,7 +75,8 @@ ext {
                 //阿里路由框架配置
                 javaCompileOptions {
                     annotationProcessorOptions {
-                        arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
+                        arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable",
+                                     eventBusIndex : project.getName()+'.MyEventBusIndex']
                         logger.info("阿里路由框架配置："+project.getName())
                     }
                 }
